Fix for JDK 8